--- a/views/niceSurvey.html
+++ b/views/niceSurvey.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Questionnaire</title>
+    <title>Servey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Style sheet (CSS) and JavaScript scripts necessary to use Bootstrap -->
